<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".MainActivity">

    <!-- ImageView centrada horizontalmente -->
    <ImageView
        android:id="@+id/logo_app"
        android:layout_width="268dp"
        android:layout_height="256dp"
        android:layout_marginTop="44dp"
        android:contentDescription="@string/logo_app"
        android:src="@drawable/logo_app"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- TextView "Bienvenido" debajo del logo -->

    <!-- TextView de la frase inspiradora -->

    <TextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="sans-serif-black"
        android:text="Bienvenido"
        android:textColor="#3e45ca"
        android:textSize="38sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo_app" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="325dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="casual"
        android:shadowDx="-1"
        android:shadowDy="-1"
        android:shadowRadius="15"
        android:text="@string/mensaje_main"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="28sp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView13" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnGoogleSignIn"
        android:layout_width="335dp"
        android:layout_height="63dp"
        android:layout_marginTop="50dp"
        android:backgroundTint="#3e45ca"
        android:text="@string/Ingresar"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        android:paddingStart="20dp"
        app:icon="@drawable/googleg_standard_color_18"
        app:iconGravity="start"
        app:iconPadding="-20dp"
        app:iconSize="20dp"
        app:iconTint="@null"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <Button
        android:id="@+id/btn_invitado"
        android:layout_width="335dp"
        android:layout_height="63dp"
        android:layout_marginTop="8dp"
        android:backgroundTint="#B0D0FF"
        android:text="@string/invitado"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnGoogleSignIn" />

    <!-- Si necesitas el comentario, déjalo dentro del ConstraintLayout -->
    <!-- app:layout_constraintVertical_bias="0.457" -->

</androidx.constraintlayout.widget.ConstraintLayout>